@@ -16,7 +16,7 @@ import java.io.FileWriter;
 import java.io.IOException;
 import java.util.Set;
 
-public class PacketUtilsUtil {
+public abstract class PacketUtilsUtil {
     private static final String packetRegistryClass = """
     private static class PacketRegistry extends SimpleRegistry<Class<? extends Packet<?>>> {
         public PacketRegistry() {
@@ -81,7 +81,7 @@ public class PacketUtilsUtil {
         @NotNull
         @Override
         public Iterator<Class<? extends Packet<?>>> iterator() {
-            return Iterators.concat(S2C_PACKETS.keySet().iterator(), C2S_PACKETS.keySet().iterator());
+            return Stream.concat(S2C_PACKETS.keySet().stream(), C2S_PACKETS.keySet().stream()).iterator();
         }
 
         @Override
@@ -91,7 +91,7 @@ public class PacketUtilsUtil {
 
         @Override
         public Set<Map.Entry<RegistryKey<Class<? extends Packet<?>>>, Class<? extends Packet<?>>>> getEntrySet() {
-            return null;
+            return Collections.emptySet();
         }
 
         @Override
@@ -152,7 +152,7 @@ public class PacketUtilsUtil {
 
         @Override
         public Set<RegistryKey<Class<? extends Packet<?>>>> getKeys() {
-            return null;
+            return Collections.emptySet();
         }
     }
 """;
@@ -168,114 +168,111 @@ public class PacketUtilsUtil {
 
     public static void init() throws IOException {
         // Generate PacketUtils.java
-        File file = new File("src/main/java/" + PacketUtilsUtil.class.getPackageName().replace('.', '/') + "/PacketUtils.java");
+        File file = new File("src/main/java/%s/PacketUtils.java".formatted(PacketUtilsUtil.class.getPackageName().replace('.', '/')));
         if (!file.exists()) {
             file.getParentFile().mkdirs();
             file.createNewFile();
         }
 
-        BufferedWriter writer = new BufferedWriter(new FileWriter(file));
+        try (BufferedWriter writer = new BufferedWriter(new FileWriter(file))) {
+            writer.write("/*\n");
+            writer.write(" * This file is part of the Meteor Client distribution (https://github.com/MeteorDevelopment/meteor-client/).\n");
+            writer.write(" * Copyright (c) Meteor Development.\n");
+            writer.write(" */\n\n");
 
-        writer.write("/*\n");
-        writer.write(" * This file is part of the Meteor Client distribution (https://github.com/MeteorDevelopment/meteor-client/).\n");
-        writer.write(" * Copyright (c) Meteor Development.\n");
-        writer.write(" */\n\n");
+            writer.write("package meteordevelopment.meteorclient.utils.network;\n\n");
 
-        writer.write("package meteordevelopment.meteorclient.utils.network;\n\n");
+            //   Write imports
+            writer.write("import com.mojang.datafixers.util.Pair;\n");
+            writer.write("import com.mojang.serialization.Lifecycle;\n");
+            writer.write("import meteordevelopment.meteorclient.utils.misc.MeteorIdentifier;\n");
+            writer.write("import net.minecraft.network.packet.Packet;\n");
+            writer.write("import net.minecraft.registry.Registry;\n");
+            writer.write("import net.minecraft.registry.RegistryKey;\n");
+            writer.write("import net.minecraft.registry.SimpleRegistry;\n");
+            writer.write("import net.minecraft.registry.entry.RegistryEntry;\n");
+            writer.write("import net.minecraft.registry.entry.RegistryEntryList;\n");
+            writer.write("import net.minecraft.registry.tag.TagKey;\n");
+            writer.write("import net.minecraft.util.Identifier;\n");
+            writer.write("import net.minecraft.util.math.random.Random;\n");
+            writer.write("import org.jetbrains.annotations.NotNull;\n");
 
-        //   Write imports
-        writer.write("import com.google.common.collect.Iterators;\n");
-        writer.write("import com.mojang.datafixers.util.Pair;\n");
-        writer.write("import com.mojang.serialization.Lifecycle;\n");
-        writer.write("import meteordevelopment.meteorclient.utils.misc.MeteorIdentifier;\n");
-        writer.write("import net.minecraft.network.packet.Packet;\n");
-        writer.write("import net.minecraft.registry.Registry;\n");
-        writer.write("import net.minecraft.registry.RegistryKey;\n");
-        writer.write("import net.minecraft.registry.SimpleRegistry;\n");
-        writer.write("import net.minecraft.registry.entry.RegistryEntry;\n");
-        writer.write("import net.minecraft.registry.entry.RegistryEntryList;\n");
-        writer.write("import net.minecraft.registry.tag.TagKey;\n");
-        writer.write("import net.minecraft.util.Identifier;\n");
-        writer.write("import net.minecraft.util.math.random.Random;\n");
-        writer.write("import org.jetbrains.annotations.NotNull;\n");
+            writer.write("import java.util.*;\n");
+            writer.write("import java.util.stream.Stream;\n");
 
-        writer.write("import java.util.*;\n");
-        writer.write("import java.util.stream.Stream;\n");
+            //   Write class
+            writer.write("\npublic abstract class PacketUtils {\n");
 
-        //   Write class
-        writer.write("\npublic class PacketUtils {\n");
+            //     Write fields
+            writer.write("    public static final Registry<Class<? extends Packet<?>>> REGISTRY = new PacketRegistry();\n\n");
+            writer.write("    private static final Map<Class<? extends Packet<?>>, String> S2C_PACKETS = new HashMap<>();\n");
+            writer.write("    private static final Map<Class<? extends Packet<?>>, String> C2S_PACKETS = new HashMap<>();\n\n");
+            writer.write("    private static final Map<String, Class<? extends Packet<?>>> S2C_PACKETS_R = new HashMap<>();\n");
+            writer.write("    private static final Map<String, Class<? extends Packet<?>>> C2S_PACKETS_R = new HashMap<>();\n\n");
 
-        //     Write fields
-        writer.write("    public static final Registry<Class<? extends Packet<?>>> REGISTRY = new PacketRegistry();\n\n");
-        writer.write("    private static final Map<Class<? extends Packet<?>>, String> S2C_PACKETS = new HashMap<>();\n");
-        writer.write("    private static final Map<Class<? extends Packet<?>>, String> C2S_PACKETS = new HashMap<>();\n\n");
-        writer.write("    private static final Map<String, Class<? extends Packet<?>>> S2C_PACKETS_R = new HashMap<>();\n");
-        writer.write("    private static final Map<String, Class<? extends Packet<?>>> C2S_PACKETS_R = new HashMap<>();\n\n");
+            //     Write static block
+            writer.write("    static {\n");
 
-        //     Write static block
-        writer.write("    static {\n");
+            // Client -> Sever Packets
+            Reflections c2s = new Reflections("net.minecraft.network.packet.c2s", Scanners.SubTypes);
+            Set<Class<? extends Packet>> c2sPackets = c2s.getSubTypesOf(Packet.class);
 
-        // Client -> Sever Packets
-        Reflections c2s = new Reflections("net.minecraft.network.packet.c2s", Scanners.SubTypes);
-        Set<Class<? extends Packet>> c2sPackets = c2s.getSubTypesOf(Packet.class);
+            for (Class<? extends Packet> c2sPacket : c2sPackets) {
+                String name = c2sPacket.getName();
+                String className = name.substring(name.lastIndexOf('.') + 1).replace('$', '.');
+                String fullName = name.replace('$', '.');
 
-        for (Class<? extends Packet> c2sPacket : c2sPackets) {
-            String name = c2sPacket.getName();
-            String className = name.substring(name.lastIndexOf('.') + 1).replace('$', '.');
-            String fullName = name.replace('$', '.');
+                writer.write("        C2S_PACKETS.put(%s.class, \"%s\");%n".formatted(fullName, className));
+                writer.write("        C2S_PACKETS_R.put(\"%s\", %s.class);%n".formatted(className, fullName));
+            }
 
-            writer.write(String.format("        C2S_PACKETS.put(%s.class, \"%s\");\n", fullName, className));
-            writer.write(String.format("        C2S_PACKETS_R.put(\"%s\", %s.class);\n", className, fullName));
+            writer.newLine();
+
+            // Server -> Client Packets
+            Reflections s2c = new Reflections("net.minecraft.network.packet.s2c", Scanners.SubTypes);
+            Set<Class<? extends Packet>> s2cPackets = s2c.getSubTypesOf(Packet.class);
+
+            for (Class<? extends Packet> s2cPacket : s2cPackets) {
+                if (s2cPacket == BundlePacket.class) continue;
+                String name = s2cPacket.getName();
+                String className = name.substring(name.lastIndexOf('.') + 1).replace('$', '.');
+                String fullName = name.replace('$', '.');
+
+                writer.write("        S2C_PACKETS.put(%s.class, \"%s\");%n".formatted(fullName, className));
+                writer.write("        S2C_PACKETS_R.put(\"%s\", %s.class);%n".formatted(className, fullName));
+            }
+
+            writer.write("    }\n\n");
+
+            //     Write getName method
+            writer.write("    public static String getName(Class<? extends Packet<?>> packetClass) {\n");
+            writer.write("        String name = S2C_PACKETS.get(packetClass);\n");
+            writer.write("        if (name != null) return name;\n");
+            writer.write("        return C2S_PACKETS.get(packetClass);\n");
+            writer.write("    }\n\n");
+
+            //     Write getPacket method
+            writer.write("    public static Class<? extends Packet<?>> getPacket(String name) {\n");
+            writer.write("        Class<? extends Packet<?>> packet = S2C_PACKETS_R.get(name);\n");
+            writer.write("        if (packet != null) return packet;\n");
+            writer.write("        return C2S_PACKETS_R.get(name);\n");
+            writer.write("    }\n\n");
+
+            //     Write getS2CPackets method
+            writer.write("    public static Set<Class<? extends Packet<?>>> getS2CPackets() {\n");
+            writer.write("        return S2C_PACKETS.keySet();\n");
+            writer.write("    }\n\n");
+
+            //     Write getC2SPackets method
+            writer.write("    public static Set<Class<? extends Packet<?>>> getC2SPackets() {\n");
+            writer.write("        return C2S_PACKETS.keySet();\n");
+            writer.write("    }\n\n");
+
+            // Write PacketRegistry class
+            writer.write(packetRegistryClass);
+
+            //   Write end class
+            writer.write("}\n");
         }
-
-        writer.newLine();
-
-        // Server -> Client Packets
-        Reflections s2c = new Reflections("net.minecraft.network.packet.s2c", Scanners.SubTypes);
-        Set<Class<? extends Packet>> s2cPackets = s2c.getSubTypesOf(Packet.class);
-
-        for (Class<? extends Packet> s2cPacket : s2cPackets) {
-            if (s2cPacket == BundlePacket.class) continue;
-            String name = s2cPacket.getName();
-            String className = name.substring(name.lastIndexOf('.') + 1).replace('$', '.');
-            String fullName = name.replace('$', '.');
-
-            writer.write(String.format("        S2C_PACKETS.put(%s.class, \"%s\");\n", fullName, className));
-            writer.write(String.format("        S2C_PACKETS_R.put(\"%s\", %s.class);\n", className, fullName));
-        }
-
-        writer.write("    }\n\n");
-
-        //     Write getName method
-        writer.write("    public static String getName(Class<? extends Packet<?>> packetClass) {\n");
-        writer.write("        String name = S2C_PACKETS.get(packetClass);\n");
-        writer.write("        if (name != null) return name;\n");
-        writer.write("        return C2S_PACKETS.get(packetClass);\n");
-        writer.write("    }\n\n");
-
-        //     Write getPacket method
-        writer.write("    public static Class<? extends Packet<?>> getPacket(String name) {\n");
-        writer.write("        Class<? extends Packet<?>> packet = S2C_PACKETS_R.get(name);\n");
-        writer.write("        if (packet != null) return packet;\n");
-        writer.write("        return C2S_PACKETS_R.get(name);\n");
-        writer.write("    }\n\n");
-
-        //     Write getS2CPackets method
-        writer.write("    public static Set<Class<? extends Packet<?>>> getS2CPackets() {\n");
-        writer.write("        return S2C_PACKETS.keySet();\n");
-        writer.write("    }\n\n");
-
-        //     Write getC2SPackets method
-        writer.write("    public static Set<Class<? extends Packet<?>>> getC2SPackets() {\n");
-        writer.write("        return C2S_PACKETS.keySet();\n");
-        writer.write("    }\n\n");
-
-        // Write PacketRegistry class
-        writer.write(packetRegistryClass);
-
-        //   Write end class
-        writer.write("}\n");
-
-        writer.close();
     }
 }
